packages/apps/spaces/components/ui-kit/molecules/email-timeline-item/email-timeline-item.module.scss
.emailContainer {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.emailData {
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid var(--gray-300);
  padding-bottom: var(--spacing-xxs);

  & .emailDataColumn {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
}

.emailParty {
  display: flex;
  justify-content: flex-end;
  font-size: 1.05rem;
  font-weight: 700;
  margin-right: 8px;
}

.emailContentContainer {
  position: relative;
  display: block;
  overflow: hidden;
  pointer-events: none;
  padding: var(--spacing-md) 0;

  &.eclipse:after {
    content: '';
    position: absolute;
    left: 0px;
    right: 0px;
    height: 100%;
    bottom: 0px;
    background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 1) 0%,
      rgba(255, 255, 255, 1) 10%,
      rgba(255, 255, 255, 0.6) 50%,
      rgba(255, 255, 255, 0) 100%
    );
    pointer-events: none;
  }
}

.emailContent {
  min-height: 40px;
  & * {
    margin-bottom: 2px;
  }
}

.toggleExpandButton {
  display: flex;

  justify-content: flex-end;
  position: absolute;
  bottom: 0px;
  right: 0;
}
.stamp {
  width: 36px;
  min-width: 36px;
  height: 43px;
  display: inline-block;
  padding: var(--spacing-xxxs);
  background: white;
  position: relative;
  -webkit-filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
  background: radial-gradient(
    transparent 3px,
    transparent 2px,
    white 2px,
    white
  );
  background-size: 7px 7px;
  background-position: -10px -10px;

  &:after {
    content: '';
    position: absolute;
    left: 5px;
    top: 5px;
    right: 5px;
    bottom: 5px;
    z-index: -1;
  }
  /*Some text*/
  &:before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    color: white;
    opacity: 0.75;
    line-height: 100%;
    padding: 20px; // this should to to variable
  }

  & div {
    width: 100%;
    height: 100%;
    background: white;
  }
}

.emailRecipients {
  display: flex;
  flex-wrap: wrap;

  & span:not(:last-of-type) {
    margin-right: 4px;

    &:after {
      content: ',';
    }
  }
}

.emailDataTable {
  border: none;
}

